@@ -64,6 +64,11 @@
 	* runtest: Wait for a second for coredumps to make it to disk.
 	* libproc/Psymtab.c (Pbuild_file_symtab): Fix Ptrace()/Puntrace()
 	imbalance.  If PTRACE_GETMAPFD doesn't work, say why.
+	* libproc/Pcontrol.h (exec_handler_fun): Make it clearer that this
+	is a function pointer.
+	(ps_prochandle_t.exec_handler): Likewise.
+	(set_exec_handler): Likewise.
+	* libproc/Pcontrol.c (set_exec_handler): Likewise.
 
 2013-06-04  Nick Alcock  <nick.alcock@oracle.com>
 
